# PaddleScience

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  Dockerfile.rocm  LICENSE  README.md  export_PYTHONPATH.text  geo_test.py  index.html  inflation_test.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.sh  requirements.txt  setup.py  sitemap.xml  test.py  tset_bot.txt  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
2024-08/: paddlescience.py  paddletest.py  record.docx
Est/: est_paddle_train.py  test.py
Module/: __init__.py
TADF/: TADF材料分子筛选-说明.md
angle/: angle_ppsci.py  (+1 more)
jointContribution/deepali/: CITATION.cff  README.md  pyproject.toml
jointContribution/deepali/docs/: _citations.bib  _config.yml  _toc.yml  index.md
jointContribution/deepali/docs/basics/: example-page.md  installation.md
jointContribution/deepali/docs/reference/core/: domain.md  flow.md  image.md  index.md  kernels.md
jointContribution/deepali/docs/reference/data/: dataset.md  index.md  sampler.md  tensor.md  transforms.md
jointContribution/deepali/docs/reference/losses/: index.md
jointContribution/deepali/docs/reference/modules/: index.md
jointContribution/deepali/docs/reference/networks/: index.md
jointContribution/deepali/docs/reference/spatial/: common.md  composite.md  index.md  transformer.md
jointContribution/deepali/docs/reference/utils/: index.md
jointContribution/deepali/docs/tutorials/: example-myst-notebook.md  example-notebook.ipynb  pairwise-registration-intro.ipynb
jointContribution/deepali/examples/ffd/: README.md  __main__.py  engine.py  hooks.py  losses.py  optim.py  pairwise.py  params.yaml  register.py
jointContribution/deepali/examples/istn/: README.md  params.yaml  requirements.txt  train.py
jointContribution/deepali/examples/istn/models/: __init__.py  itn.py  stn.py
jointContribution/deepali/src/deepali/core/: __init__.py  _kornia.py  affine.py  argparse.py  bspline.py  collections.py  config.py  cube.py  enum.py  environ.py  flow.py  functional.py  grid.py  image.py  itertools.py  kernels.py  linalg.py  logging.py  math.py  nnutils.py  pathlib.py  pointset.py  psutil.py  random.py  storage.py  tempfile.py  tensor.py  typing.py
jointContribution/deepali/src/deepali/data/: __init__.py  collate.py  dataset.py  flow.py  image.py  partition.py  prepare.py  sample.py  sampler.py  tensor.py
jointContribution/deepali/src/deepali/data/transforms/: __init__.py  image.py  item.py
jointContribution/deepali/src/deepali/losses/: __init__.py  base.py  bspline.py  flow.py  functional.py  image.py  params.py  pointset.py
jointContribution/deepali/src/deepali/modules/: __init__.py  basic.py  flow.py  image.py  lambd.py  mixins.py  output.py  sample.py  utilities.py
jointContribution/deepali/src/deepali/networks/: __init__.py  resnet.py  unet.py  utils.py
jointContribution/deepali/src/deepali/networks/blocks/: __init__.py  residual.py  skip.py
jointContribution/deepali/src/deepali/networks/layers/: __init__.py  acti.py  conv.py  join.py  lambd.py  linear.py  norm.py  pool.py  upsample.py
jointContribution/deepali/src/deepali/spatial/: __init__.py  base.py  bspline.py  composite.py  generic.py  image.py  linear.py  nonrigid.py  parametric.py  transformer.py
jointContribution/deepali/src/deepali/utils/: __init__.py  ipython.py  paddle_aux.py  tensorboard.py
jointContribution/deepali/src/deepali/utils/aws/: __init__.py
jointContribution/deepali/src/deepali/utils/aws/s3/: __init__.py  client.py  config.py  object.py
jointContribution/deepali/src/deepali/utils/ignite/: __init__.py  handlers.py  output_transforms.py  score_functions.py
jointContribution/deepali/src/deepali/utils/ignite/metrics/: average_loss.py  binary_classification.py  multilabel_classification.py
jointContribution/deepali/src/deepali/utils/imageio/: __init__.py  meta.py  nifti.py  sitk.py
jointContribution/deepali/src/deepali/utils/simpleitk/: __init__.py  grid.py  imageio.py  numpy.py  paddle.py  sample.py  torch.py
jointContribution/deepali/src/deepali/utils/vtk/: __init__.py  idlist.py  image.py  numpy.py  polydataio.py  simpleitk.py
jointContribution/deepali/tests/: _test_compose_svfs.py  _test_core_bspline.py  _test_core_flow_deriv.py  _test_core_flow_logv.py  test_core_bspline.py  test_core_cube.py  test_core_enum.py  test_core_flow_utils.py  test_core_grid.py  test_core_image_create.py  test_core_image_utils.py  test_core_random.py  test_core_tensor_utils.py  test_data_flow.py  test_data_image.py  test_losses_flow.py  test_network_blocks.py  test_network_layers.py  test_network_resnet.py  test_network_unet.py  test_spatial_transformer.py  test_utils_imageio_meta.py
jointContribution/paddle_harmonics/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
jointContribution/paddle_harmonics/examples/: minimal_example.py  train_sfno.py
jointContribution/paddle_harmonics/notebooks/: conditioning_sht.ipynb  getting_started.ipynb  gradient_analysis.ipynb  helmholtz.ipynb  plot_spherical_harmonics.ipynb  plotting.py  quadrature.ipynb  shallow_water_equations.ipynb  train_sfno.ipynb
jointContribution/paddle_harmonics/paddle_harmonics/: __init__.py  _disco_convolution.py  convolution.py  legendre.py  quadrature.py  random_fields.py  sht.py
jointContribution/paddle_harmonics/paddle_harmonics/distributed/: __init__.py  distributed_sht.py  primitives.py  utils.py
jointContribution/paddle_harmonics/paddle_harmonics/examples/: __init__.py  pde_sphere.py  shallow_water_equations.py
jointContribution/paddle_harmonics/paddle_harmonics/examples/sfno/: __init__.py
jointContribution/paddle_harmonics/paddle_harmonics/examples/sfno/models/: __init__.py  activations.py  contractions.py  factorizations.py  layers.py  sfno.py
jointContribution/paddle_harmonics/paddle_harmonics/examples/sfno/utils/: pde_dataset.py
jointContribution/paddle_harmonics/paddle_harmonics/utils/: factorized_tensor.py  paddle_aux.py
jointContribution/paddle_harmonics/tests/: gradcheck.py  test_convolution.py  test_distributed.py  test_sht.py
(+3234 files in other folders)
