[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "paddlesci"
version = "1.0.0"
description = "A library for scientific machine learning"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "PaddlePaddle" },
]
requires-python = ">=3.7"
keywords = [
    "Machine learning",
    "Deep learning",
    "Differential equations",
    "AI4Science",
    "Physics-informed neural networks",
    "PaddlePaddle",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy",
    "sympy",
    "matplotlib",
    "vtk",
    "pyevtk",
    "wget",
    "scipy",
    "visualdl",
    "pyvista==0.37.0",
    "pyyaml",
    "scikit-optimize",
    "h5py",
    "meshio==5.3.4",
    "tqdm",
    "imageio",
    "colorlog",
]

[project.urls]
Homepage = "https://github.com/PaddlePaddle/PaddleScience"
"Bug Tracker" = "https://github.com/PaddlePaddle/PaddleScience/issues"
Changelog = "https://github.com/PaddlePaddle/PaddleScience/releases"
Documentation = "https://paddlescience-docs.readthedocs.io/zh/latest/"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs*", "examples*", "jointContribution*", "test_tipc*", "test*", "tools*"]

[tool.ruff]
line-length = 88
ignore = ["E501", "E741"]
extend-exclude = ["./ppsci/geometry/inflation.py"]
